# anime-cli

./: LICENSE  README.md  pyproject.toml
anicli/: __init__.py  __main__.py  search.py
anime_cli/: __init__.py  __main__.py  anime.py  prompts.py  proxy_server.py  search.py
anime_cli/search/: __init__.py  gogoanime.py
