[tool.poetry]
name = "anime-cli"
version = "0.3.3"
description = "A python based anime cli, search, download watch animes. (Works on Windows too)"
authors = ["Chirag Singla <chirag.singla.pi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chirag-droid/anime-cli"
repository = "https://github.com/chirag-droid/anime-cli"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: Public Domain",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment"
]

[tool.poetry.scripts]
anime-cli = 'anime_cli.__main__:main'

[tool.poetry.dependencies]
python = "^3.9"
inquirerpy = "^0.3.0"
bs4 = "^0.0.1"
requests = "^2.26.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
